2009-10-03  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (main): Add HildonAppMenu for Fremantle
	(options_dialog): Create options dialog for all Hildon versions

2009-09-19  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (gpe_handle_close): Remove Iconise option for Fremantle

2009-09-18  Graham Cobb  <g+770@cobb.uk.net>

	* globals.h: define PANGO symbols if they are not defined

2009-09-17  Graham Cobb  <g+770@cobb.uk.net>

	* pannedwindow.c (process_motion): swap argument order to workround compiler bug
	with double arguments

2009-09-16  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (main): Remove some compilation warnings about types

	* globals.h: add definitions for missing PANGO constants

2009-09-15  Graham Cobb  <g+770@cobb.uk.net>

	* month_view.c (render): Set column heading font and event font
	to black

	* week_view.c (draw_expose_event): set event font to black
	(reload_events_hard): set day font to Dark Olive Green

	* day_view.c (time_layout): Set time foreground to Dark Olive Green
	(event_rect_expose): Set event foreground to Black

2009-09-14  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (main): Remove Tools->Toolbar and Tools->Fullscreen for Fremantle
	(edit_categories): Set dialog as transient for main window (Bug 299)

2009-09-13  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: set up MAEMO5 condition for automake

	* pixmaps/Makefile.am (gpe-calendar.png): Conditionalise application icon size

2009-09-09  Graham Cobb  <g+770@cobb.uk.net>

	* configure.ac: Define MAEMO_VERSION and MAEMO_VERSION_MAJOR
	even on non-hildon platforms to make conditional tests easier

	* main.c (main): Use HildonDateButton in Fremantle

2009-09-02  Graham Cobb  <g+770@cobb.uk.net>

	* main.c (main): Add toolbar using hildon_window_add_toolbar
	(toolbar_size_allocate): Add/remove date toolbar using
	hildon_window_add/remove_toolbar

	* gtkdatesel.c (gtk_date_sel_new): Only force month widget size on
	Maemo versions less than 5
